Form and entities to make a connection request

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -23,5 +23,12 @@
                 {{ macro.connectionRow(connection) }}
             {% endfor %}
         {% endif %}
+
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+
+        <input type="submit">
+        {{ form_end(form) }}
+
     {% endif %}
 {% endblock %}
