--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,6 +10,7 @@
 
         <p>
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                <a href="{{ path('settings') }}">Inställningar</a> |
                 <a href="{{ path('fos_user_security_logout') }}">Logga ut</a>
             {% else %}
                 <a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook'}) }}">Logga in</a>
