--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,12 +9,13 @@
     <body>
 
         <p>
+            <a href="{{ path('homepage') }}">Start</a> |
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 <a href="{{ path('settings') }}">Inställningar</a> |
-                <a href="{{ path('fos_user_security_logout') }}">Logga ut</a>
                 {% if is_granted('ROLE_ADMIN') %}
-                    | <a href="{{ path('admin_start') }}">Admin</a>
+                    <a href="{{ path('admin_start') }}">Admin</a> |
                 {% endif %}
+                <a href="{{ path('fos_user_security_logout') }}">Logga ut</a>
             {% else %}
                 <a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook'}) }}">Logga in</a>
             {% endif %}
