--- a/app/Resources/views/email/connectionCreated.txt.twig
+++ b/app/Resources/views/email/connectionCreated.txt.twig
@@ -1,1 +1,20 @@
-Grattis! Du ska fika med {{ partner.name }}.
+Hej {{ recipient.name }}!
+
+Vad kul att du vill vara med och fika!
+
+Vi har nu hittat en matchning till dig. Han heter {{ partner.name }} och gillar {% for category in recipient.categories -%}
+    {{ category.name|lower }}{% if loop.revindex == 2 %} och {% elseif not loop.last %}, {% endif %}
+{%- endfor %}.
+
+Du får här mailadressen: {{ partner.email }} och din nya fikakompis har även fått din mailadress.
+
+Ni får nu bestämma en dag, tid och plats inom en vecka som passar er. All kontakt efter detta sker alltså på eget initiativ från er två. Vi rekommenderar att ni ses på en offentlig plats i cirka en timme.
+
+Återkoppla gärna till oss efteråt om hur det har gått och om du skulle vilja fika igen (med någon ny).
+
+Ni får även gärna ta en bild från er fika och skicka över några rader om hur du tycker att din kompisfika var som vi kan dela med oss av för att uppmuntra fler till att vara med :)
+
+Hör av dig om det skulle vara några frågetecken. Önskar er en trevlig fika och tack för att du är med!
+
+Bästa hälsningar,
+Cecilia
