--- a/app/Resources/views/default/notLoggedIn.html.twig
+++ b/app/Resources/views/default/notLoggedIn.html.twig
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-md-4 col-sm-4">
                     <!-- testimonial content -->
-                    <div class="testimonial-content t-one animated">
+                    <div class="testimonial-content t-one">
                         <!-- User's image , name and designation -->
                         <h4><img src="img/user-xs.jpg" alt="" class="img-responsive img-circle"/>H. Rackham<span>, Atr Director</span></h4>
                         <!-- User's comment -->
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <!-- testimonial content -->
-                    <div class="testimonial-content t-two animated">
+                    <div class="testimonial-content t-two">
                         <!-- User's image , name and designation -->
                         <h4><img src="img/user-xs.jpg" alt="" class="img-responsive img-circle"/>Bum Malorum<span>, M. D.</span></h4>
                         <!-- User's comment -->
@@ -28,7 +28,7 @@
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <!-- testimonial content -->
-                    <div class="testimonial-content t-three animated">
+                    <div class="testimonial-content t-three">
                         <!-- User's image , name and designation -->
                         <h4><img src="img/user-xs.jpg" alt="" class="img-responsive img-circle"/>Jhonm Eloruk<span>, Manager</span></h4>
                         <!-- User's comment -->
